backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: group-6-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-go
  template:
    metadata:
      labels:
        app: my-go
    spec:
      containers:
        - name: my-container-backend
          image: nutbodyslam053/group-6-marketplace:v1.1
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: group-6-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-db
  template:
    metadata:
      labels:
        app: my-db
    spec:
      containers:
        - name: mysql
          image: mysql
          imagePullPolicy: "IfNotPresent"
          # command:
          #   - "--default-authentication-plugin=mysql_native_password"
          # restart: always
          ports:
            - containerPort: 3306
